・プレイヤーから状態管理用の変数を削除 ・マッチ関連の昨日をコントローラーからWebSocketのメッセージ中心の方法に変更（途中） ・大幅なリファクタリング

--- a/develop/server/TypingStarOnlineServer/pom.xml
+++ b/develop/server/TypingStarOnlineServer/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>app.katachiplus</groupId>
-	<artifactId>TypingRaceGameServer</artifactId>
+	<artifactId>TypingStartOnlineServer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TypingRaceGameServer</name>
-	<description>Server application for players in &apos;TypingRaceGame&apos;.</description>
+	<name>TypingStartOnlineServer</name>
+	<description>Server application for players in &apos;TypingStartOnline&apos;.</description>
 	<url/>
 	<licenses>
 		<license/>
