--- a/develop/server/TypingStarOnlineServer/pom.xml
+++ b/develop/server/TypingStarOnlineServer/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>app.katachiplus</groupId>
-	<artifactId>TypingStartOnlineServer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>TypingStartOnlineServer</name>
-	<description>Server application for players in &apos;TypingStartOnline&apos;.</description>
+	<artifactId>TypingStarOnlineServer</artifactId>
+	<version>1.0.0β</version>
+	<name>TypingStarOnlineServer</name>
+	<description>Server application for players in &apos;TypingStarOnline&apos;.</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -34,7 +34,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webmvc</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -62,6 +61,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
