--- a/develop/server/TypingStarOnlineServer/src/main/resources/application.properties
+++ b/develop/server/TypingStarOnlineServer/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.application.name=TypingStarOnlineServer
+
 management.endpoints.web.exposure.include=health
 management.endpoints.web.cors.allowed-origin-patterns=*
 management.endpoints.web.cors.allowed-methods=GET,POST
 management.endpoints.web.cors.allow-credentials=true
+
+rsa.public-key=classPath:/public.pem
+rsa.private-key=classPath:/private.pem
+
+assets.path=../Assets
